# ml_poc

./: docker-compose.yml  pyproject.toml
model_server/: .flake8  main.py  pyproject.toml  worker.py
model_server/ml_components/: __init__.py  loaders.py  models.py  preprocessors.py  transformers.py
src/common/: __init__.py  common.py  database.py  rabbit.py  schemas.py  settings.py
src/server/: main.py  schemas.py  service.py
src/worker/: main.py  schemas.py  service.py
src/worker/ml_components/: __init__.py  enums.py  models.py  preprocessors.py  transformers.py
